# ChangeLog for dev-vcs/gitolite
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/gitolite/ChangeLog,v 1.26 2012/10/30 20:11:41 idl0r Exp $

  30 Oct 2012; Christian Ruppert <idl0r@gentoo.org> -gitolite-2.1.0.ebuild,
  -gitolite-2.2.ebuild, -gitolite-2.3.ebuild,
  -files/gitolite-2.2-gl-system-setup-exit.patch:
  Cleanup

*gitolite-3.1 (10 Oct 2012)

  10 Oct 2012; Christian Ruppert <idl0r@gentoo.org> +gitolite-3.1.ebuild,
  -gitolite-3.03.ebuild, -gitolite-3.04.ebuild:
  Version bump, bug 437836 - CVE CVE-2012-4506.

  22 Sep 2012; Christian Ruppert <idl0r@gentoo.org> gitolite-3.04.ebuild:
  Fix upgrade warning when upgrading from 2.x to 3.x, bug 435816.

*gitolite-3.04 (26 Aug 2012)

  26 Aug 2012; Christian Ruppert <idl0r@gentoo.org> +gitolite-3.04.ebuild:
  Versio bump, bug 423995. Thanks to Manuel Rüger (mrueg) <gentoo@rueg.eu>.

  05 Jul 2012; Agostino Sarubbo <ago@gentoo.org> gitolite-2.3.1.ebuild:
  Stable for amd64, wrt bug #422077

  04 Jul 2012; Johannes Huber <johu@gentoo.org> gitolite-2.3.1.ebuild:
  Stable for x86, wrt bug #422077

  07 Jun 2012; Zac Medico <zmedico@gentoo.org> gitolite-2.1.0.ebuild,
  gitolite-2.2.ebuild, gitolite-2.3.1.ebuild, gitolite-2.3.ebuild,
  gitolite-3.03.ebuild:
  inherit user for enewgroup and enewuser

*gitolite-3.03 (23 May 2012)

  23 May 2012; Christian Ruppert <idl0r@gentoo.org> -gitolite-3.02.ebuild,
  +gitolite-3.03.ebuild:
  Version bump

  22 May 2012; Jeff Horelick <jdhore@gentoo.org> gitolite-2.3.ebuild:
  marked x86 per bug 416569

*gitolite-3.02 (20 May 2012)

  20 May 2012; Christian Ruppert <idl0r@gentoo.org> +gitolite-3.02.ebuild,
  metadata.xml:
  Version bump to 3.x, bug 413335

  19 May 2012; Agostino Sarubbo <ago@gentoo.org> gitolite-2.3.ebuild:
  Stable for amd64, wrt bug #416569

*gitolite-2.3.1 (18 May 2012)

  18 May 2012; Christian Ruppert <idl0r@gentoo.org> gitolite-2.3.ebuild,
  +gitolite-2.3.1.ebuild:
  Version bump, bug 413335
