@@ -3,18 +3,20 @@ Hash: SHA256
 
 DIST gitolite-2.3.1.tar.gz 255807 SHA256 53303fea0154914356830202d3de23f94682bab26197ead8ca05d58818c56e82 SHA512 a658104b54ff6668022a6010b961fbe13b8e7a66242d547e0e4cf685574d8a1fd60065112095b0d73b826f6346973cb3a5db307d84fd5aceba852f2ddd0c86ee WHIRLPOOL 5d08b9c22e6a07478836cca3b7190b61729ef89e181e4746286a4cf48f253fe07647b165f22483d983bae1767d83b39f231414dc96b4e803140f64eb244fc241
 DIST gitolite-3.1.tar.gz 119322 SHA256 36fc270c29e980f7217c203656373d1c44f73035fe18053163301cd10a4e0f04 SHA512 4b6a5a7fc558f4428350af7960e9f8ef923c114c2772c523d44c968a8c7d78dd52f2ae906f70d0f86fb1eab2c09f70a32df42c7cc24c002bec96dd654b904ec4 WHIRLPOOL 477f69bfcd2d5eff45f336fe569fd2b73c4349dd45d124cb0841a849b9f68b732afb3d1ddb497bf980bb3fd902b872b9c1018f09325a77e9eb1a16d0d4a94c3d
+DIST gitolite-3.2.tar.gz 120939 SHA256 62d56e3910b52d0ecb53d5962d4c919ede2c6c11283c3c845605bfc643e64ab8 SHA512 0e514e0c534aae59c1d03bd0849fe8c5c49995213bbd3d8eb7648730a14216fb910a4e295b9d46b959f55948a653a59700888b1b6c7909ff7ca01427d31f45e7 WHIRLPOOL efcdb05ae045e54fc0314ff77db93fed9eb5204ae6d755e82676a05dbf10055a38d617432298222b142dd0a2236fef4b9e8e2928482b77229a457e5b8a18ac36
 EBUILD gitolite-2.3.1.ebuild 1762 SHA256 f137729a5f313809bf987c31089ed5aaa1e16d426b75b625a21875e6a09f14d5 SHA512 a214ee52168ddae51477b9f16e849e3d78d40b595a54600fe47400e21e4c849499baed68efb57fb6d51ed433f87f6c494a4000cb3ac1f0253295f3652e71a0ba WHIRLPOOL 3388b1e698d11a36dae9194e98401f126fee3d786e24eadfcc50bfdfd34f92907dbb7839a6376104f51d8db2253378e6ad0e4c67ae60079e5934fef7631717b0
 EBUILD gitolite-3.1.ebuild 1940 SHA256 7451928a5d548617713e19816b70f6329ffeb2a7f9cbc98075f55de5f555aeeb SHA512 7af7af3ad8c8cdf8731824b7a20d498c3ec71b464422b8eaba85cae15b54cb0c29063fd0a47e5f3a2961a71c702535b48f5ab320995cce811b06f01d96cfb523 WHIRLPOOL da772af3c5b98c2ba49c104386b02e186b152de5db3c21104ff0c052e1ef4b718bf1bc2fcf590ea382954b9c54748b4d4f6bd84276d910955a214761d6901384
-MISC ChangeLog 4153 SHA256 3dc4bc84f9feb13b3b5a20c435a16abbe72e7bce62bcf93fce69bcd195ab8662 SHA512 980982187958056305f779f0dc38e8b1df1e3ac5319d752d828d2a1cc8e4cfd68f12640810f9366bb94d90f93003b3dc3d673e58531b3187d272df730061e4e2 WHIRLPOOL f550cb41fc64da961e6aeaa287d19b6baf2f35e61ccd950bceede4c509c1f0ba55db4354c3e2e0055dd1e3830e5a64a0739af69ab642a06e13322710ea38d06a
+EBUILD gitolite-3.2.ebuild 1944 SHA256 1b496199b34e21fe64b2899d731386c61d57751e04d711247dfa36b354da774e SHA512 15784f507e55bd58967085be526d21c157769ca66e12f20e3268928cd83d0edfb843e56e9332a2d62c3fd168b9976ed50d319c467f86f87d03af0804086ff710 WHIRLPOOL d4a7274173c772ce6a86402871e9be0575365808902a314486fc4311e3950a94997d0fe82553c1703543d556cfdd8b0a1621228e900abb378d61957fc62f62eb
+MISC ChangeLog 4274 SHA256 42e505879d2fa14cee7b13daed17961b413029f1ffb0576e78d88c9a27420832 SHA512 532fa9cad8c8ed08594f63761fad3d957503d0ffc9976193be1dc15f6852a9aa6d32cda1cfe1ef7951fe48544abed5f13491a476c373d18422a4662af994c26e WHIRLPOOL 5b64688322f35ee106d0745bdb19d9effadb0430857a5eda61b2879d4c68ceb4be1326b4fc09384efb40027e9daebca30efeb03f2a113b238ff5afcc47d5e2b5
 MISC metadata.xml 779 SHA256 b4ffa2d440bbd0bad5a09952ae8b0240b7056ad2773cd36c617d89ac0b589e8b SHA512 119a713d329854b20633d292fddd5e38f2292a81c76de4fe776cb06168ba03a2bde59b954b5453ec5232645516a62b2d0a2ec68ad27f9d011dbc309ebd1d123a WHIRLPOOL 1abe55643411d0c9a0750d221784ecd085916a3f806af052b6c5c8dc93844bed9897400535545d387697663cd1bec73b37f7fbc25956d517583eef156b945cf7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQkDR+AAoJEMOx0zmdw4Z1ewcIAJZCnoPofZvt+3PcwmfxlkyB
-d5lm96yVIjvwgG99ttFQi9J3CrMtMlXUeR9hpr47k0vbWEKNDsjlzzVb3yZP15EO
-2PcbYb5dvS+DhwFKCx0neEVLbFSTM7RhPaK95rg0P2YtItSE8ZarHtC3gSRw76Jq
-rc5bDhiyvS5+Q5ZBxajIPvLX7KeQA2ueBHQm6SrwN4ZLFsitZAsveo7gXzBIjeTB
-NCPqNFL7t8v1rBTMOuFAlXVyZzyPL8W1SUcY4LRxIKDYjQ8MfClB4wvIlkQCbxdi
-LWJedKIIpeo3q2u+nfueXJqEowfI03PLA6YfSe4IM8bE+bU4c1437Gy4I8XLGsQ=
-=5OUp
+iQEcBAEBCAAGBQJQuUEWAAoJEEqz6FtPBkyj39gH/0GZbOKgUtApJyqlorD5LU0k
+sQsJ0tUQISsevmhxQ47BHdexrxZHgbzwmBOKAM17FeQ9MUTAL9vp9a4qm7DFHeFm
+1pBsKDU+ido6UKbCjC+q7u93Eu+2oWn9L+bw5h8S4xiB6rDaOFt+ccMBqOAymV41
+uEfVeLgHQapKExkIYQMcul2xuEs80azbX8el7Ijf6kK7pMgoOGpBg5SLcnwqz1Kq
+AjX5IYWUjNcuq3TSyq3RBIy6xhp7CoiMnP4jTEvtzGL084uMu2VIitNZJ3A3oh/v
+3Sz6uOt1qzeE08oPfUxSIxJ+acvmWHK+GpTE8IT5yuRrdMAjId8B9vFxXbBqC08=
+=W00u
 -----END PGP SIGNATURE-----
