@@ -1,34 +1,38 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX qpsmtpd-0.40-badhelo_disconnect.patch 520 RMD160 f4e72cbe1d769206f719d0f3eff3c14a9216a1b8 SHA1 24ec87ae2cf9e95a8850640081b1a6594a030360 SHA256 f93dff30d7a6837b8b3e5b4b6ef9b02bb4fdeb58499e54f4d94d43668ad82970
-AUX qpsmtpd-0.40-badrcptto_allowrelay.patch 498 RMD160 8afc719f895da5aeb9a8333daaf0b690eb44d56b SHA1 2f5d4d34560415000bc0319b5bfe993f6734ea43 SHA256 f0bc5f9d4865084ef673e5271725dd01ec1d3fbfcf4ea47988d728c5acd14acf
-AUX qpsmtpd-0.40-clamd_conf.patch 707 RMD160 819b17f489ca014d3552243af15084ea6ec4fa56 SHA1 9dd3aed08fa07e7748342c9743bc29a5440e5f50 SHA256 bedc83603a4411670d4926366d0c23b0ebcf5ec00aed4621135e66c25319d927
-AUX qpsmtpd-0.40-peer_hooks.patch 1681 RMD160 8aef8e002662b833b4cb44b02bd5de5439c2fa8f SHA1 d60bb457648a66c1e85649ad9d3a414bcf4a9cad SHA256 f2b73ddd6c27b40738b15092db6c5557e0444f2ce3e93687256ad7c2e97283f3
-AUX qpsmtpd-0.43-peer_hooks.patch 1698 RMD160 c9b270b43978fcdd570a288accd548c121b626ec SHA1 118b2c20e3566400a333af090b7299bce8dde4f7 SHA256 2eb53a921f01811ca6cdd550337c63c395f6ff48d809c0f9960ba8005505e363
-AUX qpsmtpd-0.83-accept-empty-email.patch 1599 RMD160 7fbde5346d9b73a706f826238d236d86681d89ca SHA1 b899647528c43b7b3e42ef33b211dd2dc36ef85e SHA256 036d280a67da1b737b16cb56ab4acb5fa03b2ade2d38399262c63583ee6874a7
-AUX qpsmtpd-0.83-clamd_conf.patch 706 RMD160 fe1a169917c435df4b73097e26b0f627ba421278 SHA1 b4c7c5c169eba9bf700c8b383c78106c8d6f19b8 SHA256 ead4226d7037bbeac5ca66b162a8858da520ef6be73604cfe0e86c9aa51aa6f3
-AUX qpsmtpd.confd 617 RMD160 3b95ace716df3f61f9280ca783dbef43e6ee23ac SHA1 b409a52c77fad35b1a6f3c4e7eb65a7fb78cea89 SHA256 7748b525d9c3a3e8cbeec66b8b5df48510a44a1d624168278ce71720e7de8bc0
-AUX qpsmtpd.envd 74 RMD160 963ae15c132be3f99226bf5efed7da5b8f3c2570 SHA1 3a9975274ee6b8cbf2158b5643bd692291625fe8 SHA256 bbf8f40198e8a87ff6103b5dc98cae561f0dc9738a6cda3492b00468fbfdfd8e
-AUX qpsmtpd.initd 2057 RMD160 fe8a31e6b364ddf6c27ff23a25fbba1faaa96b36 SHA1 7b16474a67cd98d60c8c31c1562697b519214a54 SHA256 035db169b79760e2259e0562acca23f16b6cf108edd965c687c47ddd2d6916c1
-AUX qpsmtpd.xinetd 526 RMD160 040c159e3c637dc00f1816088852207766c286fa SHA1 81deb67094386ab4ae341572270c47c140f16e89 SHA256 45729911251be13007d95bb9e25b6c9c951a6419b8badae4e4097dfc603edcdd
-DIST qpsmtpd-0.81.tar.gz 175691 RMD160 945029280222e6221445a89c61e124f266ba4bed SHA1 8bfe4142565f9aaf407bcdc94da62cf09e00190e SHA256 302f16be06c62aac3135a5ab8fe29612e7831769e11861e5a98190987b58517d
-DIST qpsmtpd-0.82.tar.gz 176806 RMD160 8d7642f1887278ce45b3355de7da7f6b2c98a7d4 SHA1 540155086c0b5e553f951ef4f8967886384dca24 SHA256 794af76a1be3cc766ce034311a351ff76b0323c2decc49af96d626e3f3de4df9
-DIST qpsmtpd-0.83.tar.gz 177298 RMD160 b65f81b88635bc00465fe1493ee1d5f073b36255 SHA1 7d614f0a0dcdaa174e76e9853989cc86009c7d08 SHA256 4de72f28dd9b36e7e7c9de6c2574627e6704a181b99ced1949e4949dc9ff0925
-DIST qpsmtpd-0.84.tar.gz 178260 RMD160 baaf4527539090a745f6f78ec855f6e503242f95 SHA1 329943caf8e8671b09b2a5030a41a1c62c287482 SHA256 a09865816322531edd59d6fecd4bda35a9d583610b69d69a86e44038da841c98
-EBUILD qpsmtpd-0.43_rc2_pre955.ebuild 2503 RMD160 e3562f2a545e3c7a21cd4d7f94dccaa6228bb36a SHA1 fc0dc5a51e3fa97f208d802b1f221973f2cf10f2 SHA256 f1eecb3b3c798aeb1a4e8d4b1c18a922acd87d40d4b1c2e8078301befc8f477f
-EBUILD qpsmtpd-0.81.ebuild 2341 RMD160 f5579cae9b09c5caeeaa64f6d5148801dfc432ca SHA1 f718b718f778a129b7c61eba846668b7e88c6967 SHA256 a8bcc5c21313c24b4ae0df015743696aaccb46c1a7f2b890889a734127c829d2
-EBUILD qpsmtpd-0.82.ebuild 2178 RMD160 cdabb336727abdd8b449892b6390cbae8ccf259d SHA1 c8b9f88a168f221578b72d4c2d57412d7d14b440 SHA256 376280f09ee175f23983f85b993384e7336e3308db098631c1650a7925909697
-EBUILD qpsmtpd-0.83-r1.ebuild 2193 RMD160 73f7b70ae114d062b246cb3875d39175b4e984c7 SHA1 aec015d95b6e58b7f5c40f427d46b905429ab771 SHA256 2156d60865b9972ab32245913cd0c6c53cc566ab272fba67aeeb1289f1c2dd1f
-EBUILD qpsmtpd-0.83.ebuild 2120 RMD160 09f901d1cbc8307b35b1537eecee6cf1807d8470 SHA1 24dc9b65422c67aaa3879378cd3c5fbf7b359654 SHA256 67ff08a80eab942581f87a222b369e2d6577388f6eb5a2b142b44420c1aa8c8e
-EBUILD qpsmtpd-0.84.ebuild 2249 RMD160 82c1e926c3fec86ed2a7db9678763174524858bd SHA1 cb07cd44a10b945b4815e5d0cd47e86a79280f44 SHA256 db2b87afd5f84b01f55b11775c5bce65bf7e10074cd73f2f653642cce2071b86
-EBUILD qpsmtpd-9999.ebuild 2151 RMD160 140949616d0176bc7536001ec10bfe8c03c6719f SHA1 51fca394db30191432fa3f23102fe73dedbb88db SHA256 6ee5db671f26a0637f8ce3bc10bfee54baa645a19b6c910f91a11650f49a73d9
-MISC ChangeLog 3233 RMD160 761cf77d951e36b43ae27fba4a018f565c5f28f3 SHA1 ea7514a7e8e805c9e0a6dc3610aeb4ddcdac6fce SHA256 9b263c245acb58e60af253b3532ee0f3e97959eb82b551b76e31ebf5c522c563
-MISC metadata.xml 394 RMD160 04127b3a05fe12edba9d847fbc8c5d3edb1e221d SHA1 3a168041882c3960ddf378d35a0f75ba9843cccf SHA256 e66a36bb1b7e977b0735441bff4dd579d2ffe2e811d4db16128d4473c052c694
+AUX qpsmtpd-0.40-badhelo_disconnect.patch 520 SHA256 f93dff30d7a6837b8b3e5b4b6ef9b02bb4fdeb58499e54f4d94d43668ad82970 SHA512 80fc15e2c61fe98a38246304243a105478fb0ae38cfeec27b591f6ef3ab2638af57781ccaaf237f3c5cc83dc5c4e65b350a7125e74d75b77842d03581e815ab3 WHIRLPOOL 7b936be845a99a3e623c8f15534811bb0c94401f450aa05ac02a178cab5ea00545ad3ab525b86d6b764b5d7394c8df17467122400e9ff6d643695fb162358a54
+AUX qpsmtpd-0.40-badrcptto_allowrelay.patch 498 SHA256 f0bc5f9d4865084ef673e5271725dd01ec1d3fbfcf4ea47988d728c5acd14acf SHA512 542a36cc410386873fb1eeb39debc443615f39dd0cdfc0e21e914542515ae75294904778f78324e5e5ce03c39542a1e00be0b4d3c7a114b14591f343078ec8c7 WHIRLPOOL 237eb12e95ba61e0a511c42a0e51184eb7dbc6c059008952226fff5c0484509f6d3ad1899fdbf62de98cb798e3bcfec5c4f8e7de2ac62370160c41e14be89062
+AUX qpsmtpd-0.40-clamd_conf.patch 707 SHA256 bedc83603a4411670d4926366d0c23b0ebcf5ec00aed4621135e66c25319d927 SHA512 a868670b0e74526b0bdbf35eee9b1527325f31ddff83784d08da30e72e21216a4c3609408fc83e3e5d7d6b701a20003f682a028d6739a3491323623c4a20e895 WHIRLPOOL 350ce4cdd85c023050be864ac8fbfac12d9910bd580e8c33972113e788fc35399ee6e780c4ee8bb44e04e6b9842331f18950e684fd0624d3f4f65d8a1a920385
+AUX qpsmtpd-0.40-peer_hooks.patch 1681 SHA256 f2b73ddd6c27b40738b15092db6c5557e0444f2ce3e93687256ad7c2e97283f3 SHA512 4338645b250b8dc012e8319ceb586392355f5d4a5d62868df9dd8c73b39cbc7a467a984e15fd036c40f3c75f06e417116557c583a224ed74469b80490fcf94ef WHIRLPOOL 08e687b9a8bd05d2f4f25178212dc9ce9b0a690db9fa0ae4642d27a344cf183ac7f13c9e0d1ec618908858910f22714ec06ff9c9f76c5589618e0c0f501306cb
+AUX qpsmtpd-0.43-peer_hooks.patch 1698 SHA256 2eb53a921f01811ca6cdd550337c63c395f6ff48d809c0f9960ba8005505e363 SHA512 87cd1b7e9049a4d9256195fb098cee52f3018ad2379f6b9799245aa51753c4de1de746f85da1b306d7595fba57bd47d396c63d07f1394c60273234d0cacbc92e WHIRLPOOL 4810c17ae128609a64f75cb1ef993c36b34a90c0de38d88b5dceb166fdf044716b72598c80cf5ae4840f356a8703f1adc3edbd187ec7c550ded6fdfff5ecadbf
+AUX qpsmtpd-0.83-accept-empty-email.patch 1599 SHA256 036d280a67da1b737b16cb56ab4acb5fa03b2ade2d38399262c63583ee6874a7 SHA512 859235361dd238a2d1b1fc5d34e951ae184b4c66031b3ffee4c7e33aefc0fbcaa0987aab290b95d08e576da47f69769aa403ba4965f2a20fcaf431412e2a6428 WHIRLPOOL de0599c97f89ea7501ae871b968723c04d8bc7a433f5942b1b28a442e50b1221e2800de5ec716141fe54ec9a1bce0bbecd0e913290f3620cd12410dc53c3b37c
+AUX qpsmtpd-0.83-clamd_conf.patch 706 SHA256 ead4226d7037bbeac5ca66b162a8858da520ef6be73604cfe0e86c9aa51aa6f3 SHA512 644daac5c73a0997707a4195bd70faff436205b274fc2d89043ba2d07b76a2b97462a5bcbbd7146f3a6914f6243e973a0a168740dc97068dfda28eecd3ce2366 WHIRLPOOL eb5a1ed14d73d9d24c967cd79093f4a1f8bbb36b84149dae1488fb5bd448b651e842cf3f5f2526a7ee753e795429a48a7db610b7c0360686ade37ded64c00f7b
+AUX qpsmtpd.confd 617 SHA256 7748b525d9c3a3e8cbeec66b8b5df48510a44a1d624168278ce71720e7de8bc0 SHA512 d6dae42a493de7ac7c00e5b1aa2ccb7e1f3b3a2f23011ce854252d1e988d029adcb46407f2aff78cf8c4b832ef38e25a6fa2ddac4512acf7a455ab5f031201a2 WHIRLPOOL 7290cf8d7220e34208250a456b4dc244c9dd2eaf2e4041e201c078a396657c59724653be5a98cf206b7335c6b8378b3e7b0efd0d85cdf39a7276f178d526b089
+AUX qpsmtpd.envd 74 SHA256 bbf8f40198e8a87ff6103b5dc98cae561f0dc9738a6cda3492b00468fbfdfd8e SHA512 2fe8e49d55df9216249fda126cf632c82b19740878f3f8aa3044b4f98d435ebd37933fa786dd89e9f538486251239f87f42942f3e12673d096aca9f5b9cb3ea8 WHIRLPOOL 1d4944de0731b4a2b00da1a9092fa0f995fad80df95a3852307f5eeba19345cf0e2456c436011e1363d7ce91df736ae8e742a4146ee8d93e1687e97cfe195764
+AUX qpsmtpd.initd 2057 SHA256 035db169b79760e2259e0562acca23f16b6cf108edd965c687c47ddd2d6916c1 SHA512 09f4db3f9baf8baa1b930a32aaa547a01797a3523f4184695beefb1f5cade5c886e8da387e73df9f8091e3e699c97bcf511ea3662591d2b251d9327f024fc578 WHIRLPOOL 363f42b1d6527e7abf676a02ac9d070b5dbebba840a0d98a563eaf5a0806f206acdc43d4f63407754c33701b90a94e429301312fb65f8e74624eccecd9be3a4f
+AUX qpsmtpd.xinetd 526 SHA256 45729911251be13007d95bb9e25b6c9c951a6419b8badae4e4097dfc603edcdd SHA512 b02331ea352573ea6bb1a46b1df343d2819ebe39dc4a42ec750c9a59f49a653f01bc933d7a2ee32e86fd386395137309de8202970465a2a2d8668fa35ae03994 WHIRLPOOL 1d483d3053cc72de09b6ea70cc6ed458caf92c6b9cb051f82454f1cb238cfbf1a8163e9161ffcafb002333a681c62f11aa947b635d2d1aeedce555ddbc8815b6
+DIST qpsmtpd-0.81.tar.gz 175691 SHA256 302f16be06c62aac3135a5ab8fe29612e7831769e11861e5a98190987b58517d
+DIST qpsmtpd-0.82.tar.gz 176806 SHA256 794af76a1be3cc766ce034311a351ff76b0323c2decc49af96d626e3f3de4df9
+DIST qpsmtpd-0.83.tar.gz 177298 SHA256 4de72f28dd9b36e7e7c9de6c2574627e6704a181b99ced1949e4949dc9ff0925
+DIST qpsmtpd-0.84.tar.gz 178260 SHA256 a09865816322531edd59d6fecd4bda35a9d583610b69d69a86e44038da841c98
+EBUILD qpsmtpd-0.43_rc2_pre955.ebuild 2503 SHA256 7d2c3e7e19a7e28c6e867d77e2916c99624ec8ebc58cb22c67b84d0b123b4e3f SHA512 d281aa806f47f981306d05c838d92c31ceacd369036d59c87b11f7904bf258ac1d48d21e2d0f491c48830eb4d361ee1d2d0c1917477534bb3a37572c7ed0c307 WHIRLPOOL f1476f7fd7ce09269076457adc988ce1185b0e208d9b86cb04a2f968f2b520bc466aa2da6f39032064c9be77c4f36f7578233ab9d7fb5b1216835ae9ec752971
+EBUILD qpsmtpd-0.81.ebuild 2341 SHA256 314894f3988b66d9c3c619ccc53b200b9e2c83a0e4cdf2dec504f57824d45034 SHA512 5cdc54f177473af56e1b8d8d8a183523b9415eb60be31155a07662c644423dffbbf1f361b3d8871b354bae79475341dab19924760b66c2d4f5231ff01700feb3 WHIRLPOOL 3de40d66b0cf365cf5011878457f7371b033a94b7d346f3b7b274f6cb144fc713d50a101d58375b29313cb3adafa0425bce0da832d0c60b7808cfd752b83fa06
+EBUILD qpsmtpd-0.82.ebuild 2178 SHA256 ac0aee3167b10207b88ad0213a131bfa849349855eb5835ec5def1704e4a497b SHA512 752ec01a6b16a9626350a3d02585d8b15d7ceb2458c8f0ecdb033b2921b928c35474d6b5ff0b6e064536e027d781c9142ebb5467133748f3a98155843f1bb485 WHIRLPOOL 8de28b943dd85b09108eba3ada51555cfd3124600fa2f4b1f7356243f2d4aedb35327167ae439dab750ad96308e74425aed2cc43b22793cb17b221a7c9d68061
+EBUILD qpsmtpd-0.83-r1.ebuild 2193 SHA256 0da4cba5a685c781e7c7513891f4f974786b12d91b47ee43ca82bb45d817dd54 SHA512 76f143e1896d3578e3b306d49af2b0f73d05abfa84bd0869dc36634fef8ecf938fcaeda5a023723ec1253ea207bc5f930fde9f761757477d3ca411102506e9da WHIRLPOOL f9d230c12bc08a88336f2c6c600cbf29ec529f69caa234a3daba9c8d38a22323b17c6f497f7211a88b399cedcaf3f938073ea741e3420e0b6dea255bf2214c60
+EBUILD qpsmtpd-0.83.ebuild 2120 SHA256 bc632e4dfdec0a6dbdd61e0fd13f8c23c159e850635f186e2437394173648847 SHA512 3eac52fbe70f97d648726309612df91bfa531cb1d19acb4c2648e5d8b2bc093ae6bdbb566253e574a44f332d21e28c37b49313c12502259ad91e74e1144c0297 WHIRLPOOL 511c0422c65ddb2134759bbb00ea9653e83fff758e98fbad7fb357981a545205426727796d26915129598ddc7fc7cb9908dc24eab88e61157646a2659e483a03
+EBUILD qpsmtpd-0.84.ebuild 2249 SHA256 995d17b7d9245a6d9d78436ce2eedbe0f07db2be4013e4d8348a3fbfcbed8625 SHA512 6e8e5df1f1588ad9c0ac3c3462eaa0c361f521499b99acf6875491d49c992fb636ad203cb99fbf940a374c829b2c1851fd3310b8a05cbc922c7cf9c8eb41a42a WHIRLPOOL 572c9da5b6451704bd02b54f8b4f7596f37a736f5dabc2ef1c3d37b0ef3706559c0c83807fa454d40d2ced65153cb0e0cea66793a657ac5c95bbb7440aa4b5eb
+EBUILD qpsmtpd-9999.ebuild 2151 SHA256 0e52b5b8cc78056af0ded5b6c31c822e8321ccf061dda9925a43466f184111d4 SHA512 77cf8cd63eb3bee6b858ae181f3c65f7eda11ef90dc80fbaa2b5a0166a15b108be6a74cf06663272bc2db41990dbc41e2207ce237c325df96e89e3e699990047 WHIRLPOOL 5bff9ac84153186e4d9a8bc228ef9d31f356b3b4ec4d7cc8497ffc6a83a5e1d9d46ca71321668f63a3e2f8c4b740d8e6d364bd4853f774eda549f0cef5043a58
+MISC ChangeLog 3488 SHA256 95571845d47847994051838fdc2307681ec8a08391a02838a2b0dbb250ec77e0 SHA512 19d983ae7410e4c82d3dc5e4b42a1020224c2fee22740bd57715c49e48108c76755db49ab9e80d5b388ef5b8367c686dd5d34b85307f51ed2d790d328b8c4f6e WHIRLPOOL ae473454593555228ad2bd88790603d61afda3fad567a5cbaf15e2101b7289f93072680e5014886ef61c1bc1be37d68f874c3744fa457d8a3c4feb98c5119a90
+MISC metadata.xml 394 SHA256 e66a36bb1b7e977b0735441bff4dd579d2ffe2e811d4db16128d4473c052c694 SHA512 3782543e8a1d4c9afc1b42cf2d7921092108c2a111f7531a54787dc5d2fbbaf50f6036e41a73073962ddb3a8f5ed3f6b6d2c14ee332195f2721a881417f26de7 WHIRLPOOL 4ff5e507d1c6ec81e50adc139fe15f58fc294104adb612004699f8b9cb05ce6f0d5fc5f2bc77b92c667d30f4cb1b20a2af9d7bc0da0992e4bbde84d4d6018333
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAk/IKd4ACgkQ/ejvha5XGaN7KACgxgYHwdHCnf6qMY3zyAvruJnP
-0NIAn25iLQnUYwqpc/3dN6cVgg5gLNTl
-=S1I9
+iQEcBAEBCAAGBQJQuTz1AAoJEEqz6FtPBkyjzegIAJqDSD5d/lXdaHXh4R2EDfok
+8qWi3zkEYwiNJGpXabn1NJ6tC2H0qYM+Lt0iiwnXcbjFH/D/SRj8tcB08ZeCYgCn
+CNnhWQxPcCckdy8I77sY3sKjsR15TwNHaz7PlMzcttFii59/JHymaS0wBhd4Kqu6
+r4qJPqGIhVWi275jw2WzhsFOe7QFbp4jmpZpZjkfaEPr4/XLdYTL4hh5iHwzbT+L
+4FrnTTNfvBuKKvLeP+zY+sKhJJEfazHT6x0aKJDTPerZ1xSzq4c+RXxCy2M5yFVk
+8wlf1kmkKGh131kSZxoRu2bbALP9CB1XlejvWLsUpE09bvyzd5SMDWOon90GK2s=
+=b/Rk
 -----END PGP SIGNATURE-----
