@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/qpsmtpd/qpsmtpd-0.83-r1.ebuild,v 1.5 2012/06/01 02:32:55 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/qpsmtpd/qpsmtpd-0.83-r1.ebuild,v 1.6 2012/11/30 23:10:44 radhermit Exp $
 
 EAPI=2
 
@@ -10,7 +10,7 @@ DESCRIPTION="qpsmtpd is a flexible smtpd daemon written in Perl"
 HOMEPAGE="http://smtpd.develooper.com"
 SRC_URI="http://smtpd.develooper.com/files/${P}.tar.gz"
 
-LICENSE="as-is"
+LICENSE="MIT"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="postfix ipv6 syslog"
