@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/qpsmtpd/qpsmtpd-9999.ebuild,v 1.3 2012/06/01 02:32:55 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/qpsmtpd/qpsmtpd-9999.ebuild,v 1.4 2012/11/30 23:10:44 radhermit Exp $
 
 EAPI=2
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://smtpd.develooper.com"
 EGIT_REPO_URI="git://git.develooper.com/qpsmtpd.git
 	http://git.develooper.com/qpsmtpd.git"
 
-LICENSE="as-is"
+LICENSE="MIT"
 SLOT="0"
 KEYWORDS=""
 IUSE="postfix ipv6 syslog"
