@@ -1,6 +1,12 @@
 # ChangeLog for mail-mta/qpsmtpd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/qpsmtpd/ChangeLog,v 1.15 2012/06/01 02:32:55 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/qpsmtpd/ChangeLog,v 1.16 2012/11/30 23:10:44 radhermit Exp $
+
+  30 Nov 2012; Tim Harder <radhermit@gentoo.org>
+  qpsmtpd-0.43_rc2_pre955.ebuild, qpsmtpd-0.81.ebuild, qpsmtpd-0.82.ebuild,
+  qpsmtpd-0.83.ebuild, qpsmtpd-0.83-r1.ebuild, qpsmtpd-0.84.ebuild,
+  qpsmtpd-9999.ebuild:
+  Fix LICENSE (bug #445386 by ulm).
 
   01 Jun 2012; Zac Medico <zmedico@gentoo.org> qpsmtpd-0.43_rc2_pre955.ebuild,
   qpsmtpd-0.81.ebuild, qpsmtpd-0.82.ebuild, qpsmtpd-0.83-r1.ebuild,
