@@ -1,6 +1,11 @@
 # ChangeLog for dev-vcs/gitolite
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/gitolite/ChangeLog,v 1.26 2012/10/30 20:11:41 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/gitolite/ChangeLog,v 1.27 2012/11/30 23:28:17 radhermit Exp $
+
+*gitolite-3.2 (30 Nov 2012)
+
+  30 Nov 2012; Tim Harder <radhermit@gentoo.org> +gitolite-3.2.ebuild:
+  Version bump.
 
   30 Oct 2012; Christian Ruppert <idl0r@gentoo.org> -gitolite-2.1.0.ebuild,
   -gitolite-2.2.ebuild, -gitolite-2.3.ebuild,
